# codereview-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  pyproject.toml  readme  self-review.md  test.py  vulture_whitelist.py
codereview/: __init__.py  analyzer.py  batcher.py  callbacks.py  cli.py  config.py  models.py  readme_finder.py  renderer.py  scanner.py  static_analysis.py
codereview/config/: __init__.py  loader.py  models.py  models.yaml  prompts.py
codereview/providers/: __init__.py  azure_openai.py  base.py  bedrock.py  bedrock_openai.py  deepseek.py  factory.py  google_genai.py  mixins.py  moonshot.py  nvidia.py  zai.py
docs/: MIGRATION.md  examples.md  static-analysis.md  usage.md
docs/plans/: 2026-01-22-codereview-cli-design.md  2026-01-22-codereview-cli.md  2026-01-23-model-config-extraction-design.md  2026-01-23-model-config-extraction-implementation.md  2026-02-01-readme-context-design.md  2026-02-01-readme-context-impl.md
tests/: test_analyzer.py  test_azure_provider.py  test_batcher.py  test_bedrock_openai_provider.py  test_bedrock_provider.py  test_callbacks.py  test_cli.py  test_config.py  test_config_loader.py  test_config_models.py  test_deepseek_provider.py  test_error_handling.py  test_factory_smoke.py  test_google_genai_provider.py  test_integration.py  test_markdown_export.py  test_models.py  test_moonshot_provider.py  test_nvidia_provider.py  test_placeholder_keys.py  test_provider_base.py  test_provider_factory.py  test_provider_result_shape_contract.py  test_readme_finder.py  test_renderer.py  test_scanner.py  test_static_analysis.py  test_validation.py  test_zai_provider.py
tests/fixtures/sample_code/src/: Example.java  example.cpp  example.js  example.ts  main.go  main.py  setup.sh
