[project]
name = "codereview-cli"
version = "0.2.9"
description = "Multi-provider code review CLI with AWS Bedrock, Azure OpenAI, NVIDIA NIM, and Google GenAI support"
requires-python = ">=3.14"
authors = [
    {name = "Lianghong Fei", email = "feilianghong@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["code-review", "langchain", "aws-bedrock", "azure-openai", "nvidia-nim", "google-genai", "gemini", "claude", "gpt", "devstral", "cli", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain>=1.2.10",
    "langchain-aws>=1.3.1",
    "langchain-openai>=1.1.10",
    "langchain-nvidia-ai-endpoints>=1.1.0",
    "langchain-google-genai>=4.2.1",
    "google-api-core>=2.30.0",
    "boto3>=1.42.58",
    "click>=8.1.0",
    "rich>=14.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/lianghong/codereview-cli"
Repository = "https://github.com/lianghong/codereview-cli.git"
Issues = "https://github.com/lianghong/codereview-cli/issues"

[project.scripts]
codereview = "codereview.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codereview"]

[project.optional-dependencies]
static-analysis = [
    "bandit>=1.9.4",
    "black>=26.1.0",
    "isort>=8.0.0",
    "mypy>=1.19.0",
    "ruff>=0.15.4",
    "types-PyYAML>=6.0",
    "vulture>=2.14",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
