[project]
name = "codereview-cli"
version = "0.3.1"
description = "Multi-provider code review CLI with AWS Bedrock, Azure OpenAI, NVIDIA NIM, and Google GenAI support"
requires-python = ">=3.14"
authors = [
    {name = "Lianghong Fei", email = "feilianghong@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["code-review", "langchain", "aws-bedrock", "azure-openai", "nvidia-nim", "google-genai", "gemini", "claude", "gpt", "devstral", "cli", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain>=1.2.15",
    "langchain-aws>=1.4.4",
    "langchain-openai>=1.1.14",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langchain-google-genai>=4.2.2",
    "google-api-core>=2.30.3",
    "boto3>=1.42.91",
    "click>=8.3.2",
    "rich>=15.0.0",
    "pydantic>=2.13.2",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/lianghong/codereview-cli"
Repository = "https://github.com/lianghong/codereview-cli.git"
Issues = "https://github.com/lianghong/codereview-cli/issues"

[project.scripts]
codereview = "codereview.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codereview"]

[project.optional-dependencies]
static-analysis = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=1.20.1",
    "ruff>=0.15.11",
    "types-PyYAML>=6.0.12.20260408",
    "vulture>=2.16",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.0",
]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
